html form and css stlying

--- a/lesson20/formValidation/index.html
+++ b/lesson20/formValidation/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/lesson20/formValidation/styles/styles.css">
     <title>Document</title>
 </head>
+
 <body>
     <!-- create a form with 2 inputs - username and password inputs -->
+     
+    <h1>Application form</h1>
+    <p>Please complete and submit the form below before applying for any vacant positions in our company.</p>
+      
+    <form action="">
+        <label>First name</label><br>
+        <input type="text" id="fname" placeholder="first name"><br>
+        <label>Last name:</label><br>
+        <input type="text" id="lname" placeholder="last name"><br>
+        <input type="submit" value="Submit">
+
+    </form>
+
+
 </body>
+
 </html>
